fix safari wrap

--- a/css/grid.css
+++ b/css/grid.css
@@ -15,9 +15,14 @@
 
 .row{
     width: 100%;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
+    -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
-    flex-direction: row;
 
     margin-bottom: 20px;
 }
